2008-04-26  Ales Hakl  <ales at hakl dot net>

	* Makefile.am (nobase_include_HEADERS): install types.h

	* src/hash.c (hash_t): use rwlock instead of two mutexes

2008-04-25  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: pairs identified by tag in pointer, not first word

	* src/number.c: Direct fixnums (promotion is currently broken)

2008-04-17  Ales Hakl  <ales at hakl dot net>

	* lib/regex_mod.c (native_regex_match_once_p): missing dfsch_bool()

2008-04-14  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch__get_thread_info): use __thread on gcc

2008-04-11  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_new_frame_from_hash): environments as special
	object, not cons.
	(dfsch_lookup): eliminated consing

2008-04-06  Ales Hakl  <ales at hakl dot net>

	* lib/threads.c: solaris fixes

2008-04-04  Ales Hakl  <ales at hakl dot net>

	* src/object.c: use DFSCH_TYPE_OF instead of direct acess to type
	field
	
	* Mass replace of DFSCH_TYPE_OF

2008-04-03  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (lookup_symbol): case-sensitive symbols
	Use DFSCH_TYPE_OF instead of direct access to type field

2008-03-31  Ales Hakl  <ales at hakl dot net>

	* scm/test.scm: There is no real need for this to use (require 'lib) 

2008-03-23  Ales Hakl  <ales at hakl dot net>

	* Makefile.am: add -avoid-version to modules

	* src/wrapper.c (define_wrapper_type): use dfsch_symbol_2_typename

2008-02-17  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_symbol_2_typename): centralized removal of
	brackets from typenames

2008-02-15  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_obj_write): insert space after typename

2008-02-12  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_obj_write): write object pointers correctly

	* src/object.c (abstract_class_type): abstract classes

2008-02-11  Ales Hakl  <ales at hakl dot net>

	* NEWS: release 0.2.0

2008-02-09  Ales Hakl  <ales at hakl dot net>
