@@ -1,3 +1,7 @@
+2008-04-27  Ales Hakl  <ales at hakl dot net>
+
+	* dfsch/dfsch.h: use _FAST_CADR() macros in argument destructuring
+
 2008-04-26  Ales Hakl  <ales at hakl dot net>
 
 	* Makefile.am (nobase_include_HEADERS): install types.h
